[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kudexgram"
version = "0.0.2"
description = "The Python framework for production Telegram bots."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kudexgram contributors" }]
keywords = ["telegram", "bot", "framework", "asyncio", "sdk"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "msgspec>=0.18",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
kdx = "kudexgram.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kudexgram"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
